# hagelslag

./: .gitignore  .readthedocs.yaml  .travis.yml  README.md  environment.yml  pyproject.toml  requirements.txt  rtd_requirements.txt  setup.py
config/: HRRR_AWS_Stream.config  MPAS_interpolated_HRRR.config  VSE_data_ahijevyc.config  VSE_data_match.config  calibration_forecast_hrefv2.config  calibration_forecast_hrrre.config  hrefv2_data_2017.config  hrefv2_data_2017_stampede2.config  hrefv2_data_2018.config  hrefv2_data_2018_stampede2.config  hrefv2_forecast_2017.config  hrefv2_forecast_2018.config  hrefv2_forecast_2018_stampede2.config  hrrre_data_2019.config  hrrre_forecast_2019.config  ncar_data_2013.config  ncar_data_2015.config  ncar_data_2016.config  ncar_data_2016_rt.config  ncar_data_2017_train.config  ncar_data_uh_2015.config  ncar_data_uh_2015_rt.config  ncar_eval_2015.config  ncar_eval_2015_caps.config  ncar_eval_2015_reduced.config  ncar_eval_2016.config  ncar_forecast_2015.config  ncar_forecast_2015_interpretable.config  ncar_forecast_2015_stratus.config  ncar_forecast_2015_uh.config  ncar_forecast_2016_rt.config  ncar_rt2020_data.config  ncar_storm_data_3km.ahijevyc.config  ncar_storm_data_3km.config  ncar_storm_data_3km_2020.config  ncar_storm_data_3km_ams.config  ssef_data_2014.config  ssef_data_2015.config  ssef_data_cqg_closest_2014.config  ssef_data_cqg_closest_2015.config  (+24 more)
demos/: NCAREns.ipynb  NCAREval2016.ipynb  StormTrackingDemo.ipynb  Untitled0-checkpoint.ipynb  Untitled0.ipynb  Untitled0.py  eval_sspf_days.py  ew_updates.ipynb  hwt_2021_eval.ipynb  ncar_data_2015.config  obj_tracking.py  plot_geojson_objs.ipynb  unidata_users_workshop_2015.ipynb
doc/: Makefile  conf.py  data_processing.rst  evaluation.rst  gettingstarted.rst  hagelslag.data.rst  (+8 more)
(+303 files in other folders)
